--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ cloudevents = "^1.10.1"
 pydantic = "^2.6.3"
 aiohttp = "^3.9.3"
 jsonschema = "^4.21.1"
+aiofiles = "^23.2.1"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
